--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-`cell.js` provides a light web framework to help keep javascript UI code structured and modular. The framework has a few basic functions to provide functional inheritance (as defined in the Crockford) [base.js] and a base `emitter` class [events.js] to add to objects the ability to bind and emit events. The framework is based on a very simple class called `cell` which helps developper structure their UI in a hierarchical manner that helps modularity and reusability. The concept of cells is largely inspired by the work introduced by Google in its GWT framework [http://google-web-toolkit.googlecode.com/svn/javadoc/2.1/com/google/gwt/cell/client/Cell.html]
+`cell.js` provides a light web framework to help keep javascript UI code structured and modular. The framework has a few basic functions to provide functional inheritance (as defined in the Crockford) [base.js] and a base `emitter` class [events.js] to add to objects the ability to bind and emit events. The framework is based on a very simple class called `cell` which helps developpers structure their UI in a hierarchical manner that helps modularity and reusability. The concept of cells is largely inspired by the work introduced by Google in its GWT framework [http://google-web-toolkit.googlecode.com/svn/javadoc/2.1/com/google/gwt/cell/client/Cell.html]
 
